[package]
name = "bevy_animations"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3" }
bevy_egui = { version = "0.38.0" }
avian3d = { version = "0.4.1" }
bevy-inspector-egui = { version = "0.35.0" }
bevy_panorbit_camera = { version = "0.33.0" }

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3